--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.3.27",
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.4.0",
     "formik": "^2.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
