--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
@@ -19,18 +20,22 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-autocomplete-input": "^5.5.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.2",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
+    "styled-components": "^6.1.19",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "@types/styled-components-react-native": "^5.2.5",
     "typescript": "~5.9.3"
   },
   "private": true
