--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
-    "expo": "~54.0.12",
+    "expo": "54.0.23",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
     "formik": "^2.4.6",
