--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "expo": "54.0.23",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.17",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
